# Casamento-de-Padroes

./: CMakeLists.txt  forçaBruta.c  kmp.c  rabinKarp.c  tabelaHash.c
benchmark/: benchmark.c  benchmark.h
boyer-moore/: bm.c  bmh.c  bmhs.c
